style.css
/* 
Theme Name: Hello Elementor Child
Theme URI: https://github.com/elementor/hello-theme/
Description: Hello Elementor Child is a child theme of Hello Elementor, created by Elementor team
Author: Elementor Team
Author URI: https://elementor.com/
Template: hello-elementor
Version: 1.0.1
Text Domain: hello-elementor-child
License: GNU General Public License v3 or later.
License URI: https://www.gnu.org/licenses/gpl-3.0.html
Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, featured-images, rtl-language-support, threaded-comments, translation-ready
*/

/*
    Add your custom styles here
*/

body,html {
	/* overflow-x: hidden; */
}

.grecaptcha-badge {
	visibility: hidden;
}

.eccent_header {
	position: absolute;
	width: 100%;
}

.sdigital_nav_button {
    display: block;
    position: relative;
    background-color: #FBE90E;
    border-radius: 50%;
    width: 52px;
    height: 52px;
    border: none;
}

.sdigital_nav_button:hover, .sdigital_nav_button:active, .sdigital_nav_button:focus {
    background-color: #d1c10a !important;
    outline: none !important;
}

.sdigital_nav_button img {
    display: block;
    position: absolute;
    width:23px;
    height: 23px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    filter: invert(30%) sepia(95%) saturate(906%) hue-rotate(85deg) brightness(96%) contrast(91%);
}

.sdigital_nav_button.stick {
    position: fixed !important;
    bottom: 65px;
    right: 10px;
    opacity: 0;
    visibility: hidden;
    z-index: 100;
}

.sdigital_nav_button.stick.showme {
    transition-delay: 1s;
    -webkit-transition: all 0.3s ease !important;
    -moz-transition: all 0.3s ease !important;
    -ms-transition: all 0.3s ease !important;
    -o-transition: all 0.3s ease !important;
    transition: all 0.3s ease !important;
    visibility: visible !important;
    opacity: 1 !important;
}

.sdigital_nav_button {
    -webkit-transition: background 0.3s ease !important;
    -moz-transition: background 0.3s ease !important;
    -ms-transition: background 0.3s ease !important;
    -o-transition: background 0.3s ease !important;
    transition: background 0.3s ease !important;
}

/* body .uwy.userway_p1 .uai.move {
    transform: scale(1) translateY(-65px) !important;
}

body .uwy.userway_p1 .uai {
    top:initial !important;
    bottom: 35px !important;
    right: 35px !important;
} */

.sdigital_menuholder {
    -webkit-transition: all 0.7s ease;
    -moz-transition: all 0.7s ease;
    -ms-transition: all 0.7s ease;
    -o-transition: all 0.7s ease;
    transition: all 0.7s ease;
    display: block;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: rgba(245, 245, 245, 0.97);
    overflow: hidden;
    top:0;
    left: 0;
    z-index: 999;
    visibility: hidden;
    opacity: 0 !important;
    transform: translateX(50%);
}

.sdigital_menuholder.show {
    visibility: visible !important;
    opacity: 1 !important;
    transform: translateX(0%) !important;
}

.sdigital_container {
    display: flex;
    flex-flow: row wrap;
    width: 100%;
    box-sizing: border-box;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
}

.sdigital_menuholder h3 {
    color: #128214;
    font-size: 36px;
    line-height: 40px;
    margin-top: 0 !important;
    margin-bottom: 17px !important;
    font-weight: 600;

}

.eccent_desktop_menu {
    display: flex;
    width: 100%;
    box-sizing: border-box;
    list-style-type: none;
    display: flex;
    flex-flow: column wrap;
    padding:0;
}

.eccent_desktop_menu .sub-menu li a {
    display: block;
    font-size: 16px !important;
    line-height: 20px !important;
    font-weight: 400 !important;
    font-family: "Open Sans", Sans-serif !important;
    text-transform: capitalize !important;
    padding-top: 11px !important;
    padding-bottom: 11px !important;
    box-sizing: border-box;
    width: 100%;
    color: #FFF;
}

.eccent_desktop_menu .sub-menu li a:hover, .eccent_desktop_menu .sub-menu li a:active, .eccent_desktop_menu .sub-menu li a:focus {
    color: #FBE90E;
}

.eccent_desktop_menu li a {
    display: block;
    position: relative;
    color:#333;
    font-weight: 500;
    font-family: "Poppins", Sans-serif;
    text-transform: uppercase;
    box-sizing: border-box;
    width: 100%;
}

.eccent_desktop_menu li a:hover, .eccent_desktop_menu li a:active, .eccent_desktop_menu li a:focus {
    color: #128214;
}

.eccent_desktop_menu li .sub-menu {
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -ms-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    display: block;
    width: 100%;
    box-sizing: border-box;
    list-style-type: none;
    padding:0;
    list-style-type: none;
    background-color: #1C8E1E;
    padding-left: 15px;
    padding-right: 15px;
    overflow: hidden;
    border-radius: 5px;
    opacity: 0;
    height: 0;
}

.eccent_desktop_menu li.menu-item-has-children a {
    position: relative;
}

.eccent_desktop_menu li.menu-item-has-children a:after {
    content: '';
    display: block;
    position: absolute;
    top: 50%;
    right: 15px;
    transform: translateY(-50%);
    background-size: contain;
    background-repeat: no-repeat;
    background-image: url('assets/img/down.png') !important;
}

.eccent_desktop_menu li.menu-item-has-children .sub-menu a:after {
    display: none !important;
}

.sdigital_container_column {
    display: flex;
    flex-flow: column wrap;
    box-sizing: border-box;
    justify-content: center;
}

.sdigital_menu_close {
    display: block;
    position: fixed;
    width: 45px;
    height: 45px;
    border-radius: 50%;
    z-index: 1001;
    background-color: #F9F9F9;
    border: 1px solid #128214;
    right: 15px;
    top: 15px;
}

.sdigital_menu_close:hover, .sdigital_menu_close:active, .sdigital_menu_close:focus {
    background-color: #FBE90E;
    border-color: #FBE90E;
    outline: none !important;
}

.sdigital_menu_close:hover img, .sdigital_menu_close:active img, .sdigital_menu_close:focus img {
    filter: invert(30%) sepia(95%) saturate(906%) hue-rotate(85deg) brightness(96%) contrast(91%) !important;
}

.sdigital_menu_close img {
    display: block;
    position: absolute;
    width:15px;
    height: 15px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    filter: invert(30%) sepia(95%) saturate(906%) hue-rotate(85deg) brightness(96%) contrast(91%);
}

.sdigital_menu_contactinfo {
    display: flex;
    width: 100%;
    height: auto;
    flex-flow: column wrap;
    box-sizing: border-box;
}

.sdigital_menu_contactinfo_item {
    display: flex;
    width: 100%;
    height: auto;
    flex-flow: column wrap;
    box-sizing: border-box;
}

.sdigital_menu_contactinfo_item .thetitle {
    display: flex;
    position: relative;
    flex-flow: row wrap;
    color: #222;
    width: 100%;
    justify-content: flex-start;
    align-items: flex-start;
    margin-bottom: 5px;
}

.sdigital_menu_contactinfo_item .thetitle span {
    -webkit-transition: transform 0.3s ease;
    -moz-transition: transform 0.3s ease;
    -ms-transition: transform 0.3s ease;
    -o-transition: transform 0.3s ease;
    transition: transform 0.3s ease;
    display: inline-block;
    position: relative;
    width: 52px;
    height: 52px;
    border-radius: 50%;
    background-color: #128214;
    margin-right: 10px;
}

.sdigital_menu_contactinfo_item .thetitle span:hover {
    transform: scale(1.15);
}

.sdigital_menu_contactinfo_item .thetitle h4 {
    display: inline-block;
    width: calc(100% - 55px - 10px);
    font-family: "Poppins", Sans-serif;
    font-size: 22px;
    line-height: 26px;
    color: #222;
    margin: 0 !important;
    font-weight: 600;
    text-transform: capitalize;
    padding-top: 7px;
}

.sdigital_menu_contactinfo_item:last-of-type .theinfo {
    margin-bottom: 0 !important;
}

.sdigital_menu_contactinfo_item .theinfo {
    display: block;
    width: 100%;
    margin-bottom: 25px;
}

.sdigital_menu_contactinfo_item .theinfo p {
    display: block;
    width: 100%;
    height: auto;
    margin: 0 !important;
    color: #555;
    font-family: "Open Sans", Sans-serif !important;
    font-size: 16px;
    line-height: 24px;
    text-align: left;
    font-weight: 400;
    padding-left: 65px;
    margin-top: -15px !important;
}

.sdigital_menu_contactinfo_item .theinfo a:hover, .sdigital_menu_contactinfo_item .theinfo a:active, .sdigital_menu_contactinfo_item .theinfo a:focus {
    opacity: 0.7;
}

.sdigital_menu_contactinfo_item .theinfo a {
    display: inline-block;
    font-size: 16px;
    line-height: 24px;
    color: #555 !important;
    font-weight: 400;
}

.sdigital_menu_contactinfo_item .thetitle span img {
    display: block;
    width: 19px;
    height: 19px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(80deg) brightness(108%) contrast(100%);
}

@media(max-width: 1024.9px) {
    .eccent_desktop_menu li.menu-item-has-children a {
        pointer-events: none !important;
    }

    .eccent_desktop_menu li.menu-item-has-children a:after {
        width: 15px;
        height: 15px;
    }
}

@media (max-width: 767.9px) {

    .sdigital_container {
        max-width: calc(1400px + 60px);
        padding-left: 30px;
        padding-right: 30px;
        padding-top: 50px !important;
        padding-bottom: 50px !important;
        overflow-y: auto !important;
        height: 100% !important;
    }

    .eccent_desktop_menu li a {
        font-size: 28px;
        line-height: 30px;
        padding-top: 10px;
        padding-bottom: 10px;
    }

    .sdigital_container .sdigital_container_column:first-of-type {
        width:100%;
    }

    .sdigital_container .sdigital_container_column:last-of-type {
        width:100%;
        padding-top: 50px;
    }
}

@media(min-width: 768px) and (max-width: 1024.9px) {
    .sdigital_container {
        max-width: calc(1400px + 100px);
        padding-left: 50px;
        padding-right: 50px;
    }

    .eccent_desktop_menu li a {
        font-size: 38px;
        line-height: 42px;
        padding-top: 14px;
        padding-bottom: 14px;
    }

    .sdigital_container .sdigital_container_column:first-of-type {
        width:50%;
    }

    .sdigital_container .sdigital_container_column:last-of-type {
        width:50%;
        padding-left: 50px;
    }
}

@media(min-width: 1025px) {
    .eccent_desktop_menu li.menu-item-has-children a:after {
        width: 12px;
        height: 12px;
    }

    .sdigital_container {
        max-width: calc(1400px + 140px);
        padding-left: 70px;
        padding-right: 70px;
    }

    .eccent_desktop_menu li a {
        font-size: 46px;
        line-height: 50px;
        padding-top: 15px;
        padding-bottom: 15px;
    }

    .sdigital_container .sdigital_container_column:first-of-type {
        width:55%;
    }

    .sdigital_container .sdigital_container_column:last-of-type {
        width:45%;
        padding-left: 50px;
    }
}

